Finally was able to display something

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title> this should be in the title </title>
+    </head>
   <body>
-    hi
+    <script src="index.js"> </script>
   </body>
 </html>
